// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#e5e5e5",
      "borderBottomWidth": 3,
      "display": "flex",
      "marginBottom": 20,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 15,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": 20,
          "marginRight": 5,
          "marginTop": 10,
        }
      }
    >
      BTC
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      |
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 5,
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    >
      Bitcoin
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": "auto",
          "marginRight": 10,
          "marginTop": 10,
        }
      }
    >
      8000
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
         $ 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#FAFAFA",
        "borderTopWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-around",
        "padding": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      24h: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00BFA5",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        5
         %
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      7d: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00BFA5",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        1
         %
      </Text>
    </Text>
  </View>
</View>
`;

exports[`renders correctly with negative values 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#e5e5e5",
      "borderBottomWidth": 3,
      "display": "flex",
      "marginBottom": 20,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 15,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": 20,
          "marginRight": 5,
          "marginTop": 10,
        }
      }
    >
      BTC
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      |
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 5,
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    >
      Bitcoin
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": "auto",
          "marginRight": 10,
          "marginTop": 10,
        }
      }
    >
      8000
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
         $ 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#FAFAFA",
        "borderTopWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-around",
        "padding": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      24h: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#DD2C00",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        -5
         %
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      7d: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#DD2C00",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        -15
         %
      </Text>
    </Text>
  </View>
</View>
`;

exports[`renders correctly with positive values 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#e5e5e5",
      "borderBottomWidth": 3,
      "display": "flex",
      "marginBottom": 20,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 15,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 35,
          "width": 35,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": 20,
          "marginRight": 5,
          "marginTop": 10,
        }
      }
    >
      BTC
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      |
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "marginLeft": 5,
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    >
      Bitcoin
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
          "marginLeft": "auto",
          "marginRight": 10,
          "marginTop": 10,
        }
      }
    >
      8000
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
         $ 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#FAFAFA",
        "borderTopWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-around",
        "padding": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      24h: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00BFA5",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        5
         %
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      7d: 
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00BFA5",
            "fontWeight": "bold",
            "marginLeft": 5,
          }
        }
      >
        15
         %
      </Text>
    </Text>
  </View>
</View>
`;
